# basic_return

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yaml  publish.yaml
src/basic_return/: BasicReturn.py  __init__.py
tests/: test_return.py
